// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getInjectedComponent given component and sync dependencies, when rendered, renders with dependencies 1`] = `
<div
  data-some-prop-test="true"
>
  Some content: "some-injectable-value"
</div>
`;

exports[`getInjectedComponent given component, no placeholder and async dependencies, when rendered when the dependency resolves renders 1`] = `
<div
  data-some-prop-test="true"
>
  Some content: "some-async-value"
</div>
`;

exports[`getInjectedComponent given component, placeholder and async dependencies, when rendered renders as placeholder 1`] = `
<div
  data-placeholder-test="true"
/>
`;

exports[`getInjectedComponent given component, placeholder and async dependencies, when rendered when the dependency resolves renders 1`] = `
<div
  data-some-prop-test="true"
>
  Some content: "some-async-value"
</div>
`;
